fix numerDesc alignment

--- a/src/SmartComponents/Remediations/RemediationsCard.scss
+++ b/src/SmartComponents/Remediations/RemediationsCard.scss
@@ -19,7 +19,3 @@
         font-size: var(--pf-global--FontSize--sm);
     }
 }
-
-.ins-c-dashboard__card--Remediations {
-    .pf-c-card__header { padding: 0; }
-}
